# cpp-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.py
benchmark/: CMakeLists.txt  factorial.cpp
cmake/: Ccache.cmake  NinjaColor.cmake
src/: CMakeLists.txt  factorial.cpp  factorial.hpp  main.cpp
test/: CMakeLists.txt  factorial.cpp
